# Desafio2Python

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
src/application/: todo.py
src/domain/: packbook.py  todo.py
src/infra/: routers.py
templates/: error.html  home.html  todo.html
